--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,13 @@
     }
     </script>
     
+    <!-- Favicon - Free Google Noto Emoji Tomato Icon (Apache 2.0 License) -->
+    <link rel="icon" type="image/x-icon" href="https://icons.iconarchive.com/icons/google/noto-emoji-food-drink/32/32356-tomato-icon.png">
+    <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/google/noto-emoji-food-drink/16/32356-tomato-icon.png">
+    <link rel="apple-touch-icon" sizes="128x128" href="https://icons.iconarchive.com/icons/google/noto-emoji-food-drink/128/32356-tomato-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://icons.iconarchive.com/icons/google/noto-emoji-food-drink/32/32356-tomato-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://icons.iconarchive.com/icons/google/noto-emoji-food-drink/16/32356-tomato-icon.png">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
